--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <input type="number" class="input" ></input>
         <button class="count">count</button>
     </div>
-        <canvas id="canvas" width="1400" height="600"></canvas>
+        <!-- <canvas id="canvas" width="1400" height="600"></canvas> -->
     <script src="./app.js"></script>
 </body>
 </html>
