--- a/index.html
+++ b/index.html
@@ -8,18 +8,23 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div>
+        <img class="img" src="./luky.jpeg" alt="/">
     <div class="modal">
         <div class="output">
             <h2 class="salary"></h2>
             <button class="ok">ok</button>
         </div>
     </div>
-    
+    <h3 class="h3">дайте пакушац пажалуста</h3>
     <div class="wrap">
+        
+        <div>
         <input type="number" class="input" ></input>
         <button class="count">count</button>
+        </div>
     </div>
-        <!-- <canvas id="canvas" width="1400" height="600"></canvas> -->
     <script src="./app.js"></script>
+</div>
 </body>
 </html>
