--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="modal">
         <div class="output">
             <h2 class="salary"></h2>
+            <h2 class="fod"></h2>
             <button class="ok">ok</button>
         </div>
     </div>
